<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>tech.bitey</groupId>
	<artifactId>golpanama</artifactId>
	<version>0.0.1</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javafx.version>18.0.1</javafx.version>
		<package>${project.groupId}.${project.artifactId}</package>
		<pattern>gosper_glider_gun</pattern>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>18</release>
				</configuration>
			</plugin>
			<!-- execute LifeJavaFX -->
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>${package}.LifeJavaFX</mainClass>
					<commandlineArgs>${pattern}</commandlineArgs>
				</configuration>
			</plugin>
			<!-- execute LifeX11 -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<executable>${env.JAVA_HOME}/bin/java</executable>
					<arguments>
						<argument>--module-path</argument>
						<modulepath/>
						<argument>-classpath</argument>
						<classpath/>
						<argument>--add-modules</argument>
						<argument>jdk.incubator.foreign</argument>
						<argument>--enable-native-access=golpanama</argument>
						<argument>-m</argument>
						<argument>golpanama/${package}.LifeX11</argument>
						<argument>${pattern}</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
	</dependencies>
</project>